--- a/tutorials/main/templates/main/home.html
+++ b/tutorials/main/templates/main/home.html
@@ -1,22 +1,25 @@
+{% extends 'main/header.html' %}
 
 
-<html lang="en">
-<head>
-    <title>hi</title>
-{% load static %}
-<link href="{%  static 'tinymce/css/prism.css' %}" rel="stylesheet">
-</head>
+{% block content %}
 
-<body>
- {% for tutorial in tutorials %}
+  <div class="row">
 
- <p>   {{ tutorial.tutorial_title }}</p>
-    <p>     {{ tutorial.tutorial_content|safe }}</p>
-    <p>{{ tutorial.tutorial_published }}</p>
+   {% for tutorial in tutorials %}
+    <div class="col s12 m6 l4">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">{{ tutorial.tutorial_title }}</span>
+            <p style="font-size:69%"> {{ tutorial.tutorial_published }}</p>
+          <p>{{ tutorial.tutorial_content|safe }}</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+       {% endfor %}
+  </div>
 
-{% endfor %}
-</body>
 
-<script src="{% static 'tinymce/js/prism.js' %}"></script>
-
-</html>
+{% endblock %}
