card image is added with carousel+photos

--- a/tutorials/main/templates/main/categories.html
+++ b/tutorials/main/templates/main/categories.html
@@ -7,56 +7,28 @@
 
 
   <div class="row">
-
    {% for cat in categories %}
       <div class="col s12 m6 l4">
         <a href="{{ cat.category_slug }}" style="color:#000">
-            <div class="card hoverable">
+            <div class="card-panel hoverable">
+                <div class="card-image">
+                    <img class="responsive-img" src="{% static 'main/images/c.jpg' %}" style="width: 250px">
+                </div>
                 <div class="card-content">
                     <div class="card-title">{{ cat.tutorial_category }}</div>
                     <p>{{ cat.category_summary }}</p>
+                </div>
+                 <div class="card-action">
+                  <a href="{{ cat.category_slug }}" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
                 </div>
             </div>
         </a>
 
       </div>
 
-
-
        {% endfor %}
   </div>
 
-    <div class="row">
-        <div class="col s12 m6 l4">
-      <div class="card blue-grey darken-1 hoverable">
-        <div class="card-content white-text">
-          <span class="card-title">Hi there</span>
-            <p style="font-size:69%"></p>
-          <p>this is something</p>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-        </div>
-      </div>
-    </div>
-    </div>
-
-
-        <div class="row">
-        <div class="col s12 m6 l4">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">Hi there</span>
-            <p style="font-size:69%"></p>
-          <p>this is something</p>
-        </div>
-        <div class="card-action">
-        e  <a href="#">This is a link</a>
-        </div>
-        </div>
-      </div>
-        </div>
-
 
     <div class="row">
     <div class="col s12 m6 l4">
@@ -77,6 +49,41 @@
 
 
 
+
+
+{#    <div class="row">#}
+{#        <div class="col s12 m6 l4">#}
+{#      <div class="card blue-grey darken-1 hoverable">#}
+{#        <div class="card-content white-text">#}
+{#          <span class="card-title">Hi there</span>#}
+{#            <p style="font-size:69%"></p>#}
+{#          <p>this is something</p>#}
+{#        </div>#}
+{#        <div class="card-action">#}
+{#          <a href="#">This is a link</a>#}
+{#        </div>#}
+{#      </div>#}
+{#    </div>#}
+{#    </div>#}
+
+{##}
+{#        <div class="row">#}
+{#        <div class="col s12 m6 l4">#}
+{#      <div class="card blue-grey darken-1">#}
+{#        <div class="card-content white-text">#}
+{#          <span class="card-title">Hi there</span>#}
+{#            <p style="font-size:69%"></p>#}
+{#          <p>this is something</p>#}
+{#        </div>#}
+{#        <div class="card-action">#}
+{#        e  <a href="#">This is a link</a>#}
+{#        </div>#}
+{#        </div>#}
+{#      </div>#}
+{#        </div>#}
+
+
+    <div class="row">
     <div class="col s12 m6 l4">
       <div class="card hoverable">
         <div class="card-image">
@@ -92,6 +99,7 @@
         </div>
       </div>
     </div>
+
 
 
      <div class="col s12 m6 l4">
@@ -111,6 +119,105 @@
     </div>
 
   </div>
+
+
+
+
+
+    <div class="row">
+      <div class="clearfix colelem" id="u1262-8" data-muse-uid="U1262" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p class="Title" id="u1262-6"><span id="u1262">—</span> <span id="u1262-3">OUR OFFER</span> <span id="u1262-5">—</span></p>
+      </div>
+    </div>
+
+
+
+
+    <div class="row">
+        <p style="text-align: center;  font-family: 'segoe script' " >
+
+            afsbfdjk
+             is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
+            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+        </p>
+    </div>
+
+
+
+
+
+
+
+    <div class="row">
+        <div class="col s12 m6 l6">
+      <div class="clearfix colelem" id="u1262-8" data-muse-uid="U1262" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p class="Title" id="u1262-6"><span id="u1262">—</span> <span id="u1262-3">Weddings</span> <span id="u1262-5">—</span></p>
+      </div>
+        <p style="text-align: center;  font-family: '-apple-system' " >
+
+           It is one of the most beautiful moments in life. It is a day of fulfilled wishes and promises.
+            And we are here to turn this day into a dream day full of unforgettable moments.
+        </p>
+
+
+            <h6 style="color:#B5943C">We will gladly arrange for you:</h6>
+
+            <ol>
+           <li>design of wedding day colors and decorations</li>
+           <li>flower service </li>
+                <li>wedding graphic</li>
+                <li>selection of interesting places</li>
+                <li>coordinating the ceremony and handling formal matters</li>
+                <li> music and all-day program</li>
+                <li> transport</li>
+                <li>rehearsal of wedding dresses and accessories</li>
+                <li> Make-up artist, hairdresser and photographer / cameraman</li>
+                <li> selection of wedding menu, candy bar and wedding cake</li>
+                <li>all-day coordination </li>
+            </ol>
+
+        </div>
+
+        <div class="col s12 m6 l6">
+          <div class="clearfix colelem" id="u1262-8" data-muse-uid="U1262" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p class="Title" id="u1262-6"><span id="u1262">—</span> <span id="u1262-3">Celebrations</span> <span id="u1262-5">—</span></p>
+      </div>
+        <p style="text-align: center;  font-family: 'monospace' " >
+
+            Do you want to organize a unique celebration that conjures up a smile on the face not
+            recent years a very popular baby shower. Every celebration we prepare is unique to us
+        </p>
+
+        <h5 style="color:#B5943C">We will gladly arrange for you:</h5>
+
+              <ul type="*">
+           <li>>  design of wedding day colors and decorations</li>
+           <li>>  flower service </li>
+                <li>>  a suitable place for the event</li>
+                <li>>  decoration and original motifs/li>
+                <li>>  candy bar and a selection of original cake</li>
+                <li>>  music and all-day program</li>
+                <li>>  transport</li>
+                <li>>  rehearsal of wedding dresses and accessories</li>
+                <li>>   Make-up artist, hairdresser and photographer / cameraman</li>
+                <li>>  coordinate your celebration</li>
+                <li>> coordinate your celebration</li>
+            </ul>
+
+        </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
 
 
     <div class="row">
@@ -135,6 +242,38 @@
     </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="row">
+     <div class="carousel">
+         {% for moment in moments %}
+        <a class="carousel-item" href="#one!"><img src="{{ moment.pic.url }}" alt="abc" ></a>
+         {% endfor %}
+     </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="row">
       <div class="clearfix colelem" id="u1262-8" data-muse-uid="U1262" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p class="Title" id="u1262-6"><span id="u1262">—</span> <span id="u1262-3">CONTACT</span> <span id="u1262-5">—</span></p>
@@ -147,6 +286,15 @@
                 <p5>9009112348</p5>
         <a href="{%  url 'homepage' %}" ><h6>info@abc.cz</h6></a>
     </div>
+
+
+
+
+
+
+
+
+
 
 
 {% endblock %}
