--- a/tutorials/main/templates/main/header.html
+++ b/tutorials/main/templates/main/header.html
@@ -10,12 +10,9 @@
     <link href="{%  static 'main/css/materialize.css' %}" rel="stylesheet">
 
 
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 {#    <link href="{% static 'main/css/categories.css' %}">#}
-
 
     <style>
         .carousel{
@@ -23,7 +20,6 @@
             height: 700px;
             perspective: 600px;
         }
-
 
         #u1192-6,
         #u1262-6,
@@ -34,9 +30,10 @@
         font-size: 30px;
     }
 
-
         .carousel .carousel-item{
             width:700px;
+            animation-duration: 2ms;
+
         }
 
         .carousel .carousel-item img{
