5 for the first time youtube video is embeded

--- a/tutorials/main/templates/main/categories.html
+++ b/tutorials/main/templates/main/categories.html
@@ -42,11 +42,11 @@
           I am convenient because I require little markup to use effectively.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#"></a>
         </div>
       </div>
     </div>
-
+    </div>
 
 
 
@@ -95,7 +95,7 @@
           I am convenient because I require little markup to use effectively.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#"></a>
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
           I am convenient because I require little markup to use effectively.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#"></a>
         </div>
       </div>
     </div>
@@ -207,11 +207,46 @@
 
         </div>
 
-
     </div>
 
 
 
+    <div class="row">
+     <div class="clearfix colelem" id="u1262-8" data-muse-uid="U1262" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p class="Title" id="u1262-6"><span id="u1262">—</span> <span id="u1262-3">VIDEOS</span> <span id="u1262-5">—</span></p>
+    </div>
+    </div>
+
+
+
+    <div class="row">
+       <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/zlJDTxahav0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+
+    <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+
+    <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+    </div>
+
+
+        <div class="row">
+       <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+
+    <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+
+    <div class="col s12 m6 l4">
+    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/vSE634ssEm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+       </div>
+    </div>
 
 
 
@@ -229,15 +264,24 @@
     <div class="row">
      <div class="carousel">
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
-        <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
-        <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
+
+
+         <a class="carousel-item" href="#one!">    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+</a>
+
+    <a class="carousel-item" href="#one!">    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+</a>
+
+
+
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
          <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
         <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
-        <a class="carousel-item" href="#one!"><img src="{% static 'main/images/b.jpg' %}" alt="abc" ></a>
+        <a class="carousel-item" href="#one!">    <div class="video-container"><iframe width="400" height="200" src="https://www.youtube.com/embed/m-versAlgo0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+</a>
      </div>
     </div>
 
@@ -283,18 +327,8 @@
 
     <div class="row" style="text-align: center">
             <p>Please contact me </p>
-                <p5>9009112348</p5>
+                <h5>9009112348</h5>
         <a href="{%  url 'homepage' %}" ><h6>info@abc.cz</h6></a>
     </div>
-
-
-
-
-
-
-
-
-
-
 
 {% endblock %}
