--- a/tutorials/main/templates/main/tutorial.html
+++ b/tutorials/main/templates/main/tutorial.html
@@ -28,8 +28,15 @@
                     {% endif %}
                 {% endfor %}
             </ul>
-        </div>
+            </div>
 </div>
+
+
+
+
+    <div class="row">
+    <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/BzcBsTou0C0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><br>
+    </div>
 
 
 {% endblock %}
